added running gmm with non-default parameters

--- a/gmm/Makefile
+++ b/gmm/Makefile
@@ -3,6 +3,7 @@ all: gmm generate
 gmm: model/ad/model.go main.go
 	go build .
 	./gmm
+	./gmm -alpha 0.1 -tau 1.
 
 generate: gen/main.go
 	go build -o $@ ./gen
