running the http server from the makefile

--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -1,11 +1,17 @@
 all: main.wasm wasm_exec.js
 
+PORT=8080
 # works with both GNU and BSD make
 WASM_EXEC_JS=`echo $$(go env GOROOT)/misc/wasm/wasm_exec.js`
 GO_JS_WASM_EXEC=`echo $$(go env GOROOT)/misc/wasm/go_js_wasm_exec`
 
 main.wasm: model/ad/model.go main.go
 	GOOS=js GOARCH=wasm go build -o main.wasm
+
+# the server target runs a local http server serving the page
+# with go code
+server: main.wasm
+	goexec 'http.ListenAndServe(":$(PORT)", http.FileServer(http.Dir(".")))'
 
 # the node target runs the program with Node.js.
 node: main.wasm
