--- a/gmm/Makefile
+++ b/gmm/Makefile
@@ -1,12 +1,14 @@
 all: gmm generate
 
+GO=go
+
 gmm: model/ad/model.go main.go
-	go build .
+	$(GO) build .
 	./gmm
 	./gmm -alpha 0.1 -tau 1.
 
 generate: gen/main.go
-	go build -o $@ ./gen
+	$(GO) build -o $@ ./gen
 
 model/ad/model.go: model/model.go
 	deriv model
