--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -1,12 +1,14 @@
 all: main.wasm wasm_exec.js
 
+GO=go
+
 PORT=8080
 # works with both GNU and BSD make
-WASM_EXEC_JS=`echo $$(go env GOROOT)/misc/wasm/wasm_exec.js`
-GO_JS_WASM_EXEC=`echo $$(go env GOROOT)/misc/wasm/go_js_wasm_exec`
+WASM_EXEC_JS=`echo $$($(GO) env GOROOT)/misc/wasm/wasm_exec.js`
+GO_JS_WASM_EXEC=`echo $$($(GO) env GOROOT)/misc/wasm/go_js_wasm_exec`
 
 main.wasm: model/ad/model.go main.go
-	GOOS=js GOARCH=wasm go build -o main.wasm
+	GOOS=js GOARCH=wasm $(GO) build -o main.wasm
 
 # the server target runs a local http server serving the page
 # with go code
@@ -15,7 +17,7 @@ server: main.wasm
 
 # the node target runs the program with Node.js.
 node: main.wasm
-	 GOOS=js GOARCH=wasm go run -exec="$(GO_JS_WASM_EXEC)" .
+	 GOOS=js GOARCH=wasm $(GO) run -exec="$(GO_JS_WASM_EXEC)" .
 
 wasm_exec.js:
 	cp $(WASM_EXEC_JS) .
